--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
 *.class
 
 # Package Files #
-*.jar
 *.war
 *.ear
-/build
 /eclipse
-/gradle
-*.gradle
-gradlew*
-gradlew*
 /bin
+
+/build/tmp
+/build/unpacked
